--- a/tempalte.yaml
+++ b/tempalte.yaml
@@ -17,8 +17,8 @@ Resources:
   microservicehttpendpointelixir:
     Type: 'AWS::Serverless::Function'
     Properties:
-      Handler: 'Elixir.MicroserviceHttpEndpointElixir'
-      CodeUri: _build/prod/rel/microservice_http_endpoint_elixir/releases/0.1.0/microservice_http_endpoint_elixir.zip
+      Handler: 'Elixir.ErllambdaElixirExample'
+      CodeUri: _build/prod/rel/erllambda_elixir_example/releases/0.1.0/erllambda_elixir_example.zip
       Description: >-
         A simple backend (read/write to DynamoDB) with a RESTful API endpoint using Amazon API Gateway.
       Timeout: 10
